First commited as before_106009_rev1